--- a/app/client/src/styles/pages/login/login.css
+++ b/app/client/src/styles/pages/login/login.css
@@ -23,6 +23,8 @@
   align-items: center;
   flex-direction: column;
   gap: 2rem 0;
+  width: 90%;
+  margin-top: 0;
 }
 .login-card .login-fields {
   width: 100%;
