--- a/app/client/src/styles/pages/login/login.scss
+++ b/app/client/src/styles/pages/login/login.scss
@@ -25,6 +25,8 @@
   align-items: center;
   flex-direction: column;
   gap: 2rem 0;
+  width: 90%;
+  margin-top: 0;
 
   .login-fields {
     width: 100%;
